force-app/main/default/objects/ampi__Project__c/fields/ampi__IATI_Flow_Type__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Flow_Type__c</fullName>
    <description>Picklist field to choose the type of default flow per the IATI Activity standard.</description>
    <inlineHelpText>Type of Classification; Whether the activity is funded by Official Development Assistance (ODA), Other Official Flows (OOF), etc</inlineHelpText>
    <label>IATI Flow Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ODA</fullName>
            </value>
            <value>
                <fullName>OOF</fullName>
            </value>
            <value>
                <fullName>Non-export credit OOF</fullName>
            </value>
            <value>
                <fullName>Officially supported export credits</fullName>
            </value>
            <value>
                <fullName>Private grants</fullName>
            </value>
            <value>
                <fullName>Private market</fullName>
            </value>
            <value>
                <fullName>Other Private flows at market terms</fullName>
            </value>
            <value>
                <fullName>Non flow</fullName>
            </value>
            <value>
                <fullName>Other flows</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>