force-app/main/default/objects/ampi__Project__c/fields/ampi__IATI_Humanitarian__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Humanitarian__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to mark whether an IATI Activity (Amp Project) is a Humanitarian project/program.</description>
    <label>IATI Humanitarian?</label>
    <type>Checkbox</type>
</CustomField>