force-app/main/default/objects/ampi__Project__c/fields/ampi__IATI_Humanitarian_Scope__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Humanitarian_Scope__c</fullName>
    <description>Picklist field that classifies emergencies, appeals and other humanitarian events and actions.</description>
    <inlineHelpText>Classification of emergencies, appeals and other humanitarian events and actions.</inlineHelpText>
    <label>IATI Humanitarian Scope Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Emergency</fullName>
            </value>
            <value>
                <fullName>Appeal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>