force-app/main/default/objects/ampi__Project__c/fields/ampi__IATI_Humanitarian_Scope_Code2__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Humanitarian_Scope_Code2__c</fullName>
    <description>Text field for the code associated with the IATI Humanitarian Scope according to vocabulary used</description>
    <label>IATI Humanitarian Scope Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>