force-app/main/default/objects/ampi__Project__c/fields/ampi__IATI_Humanitarian_Scope_Code__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Humanitarian_Scope_Code__c</fullName>
    <description>[Not in Use - Candidate for Deprecation] Formula field that associates a code with the ampi__IATI_Humanitarian_Scope__c</description>
    <formula>CASE(ampi__IATI_Humanitarian_Scope__c,&quot;Emergency&quot;,1,&quot;Appeal&quot;,2,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Code associated with the IATI Humanitarian Scope</inlineHelpText>
    <label>IATI Humanitarian Scope Type Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>