force-app/main/default/objects/ampi__Project__c/fields/ampi__IATI_Humanitarian_Scope_Narrative__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Humanitarian_Scope_Narrative__c</fullName>
    <description>Text field to capture the name of the humanitarian scope of the an IATI Activity for IATI reporting.</description>
    <label>IATI Humanitarian Scope Narrative</label>
    <length>255</length>
    <type>Text</type>
</CustomField>