force-app/main/default/objects/ampi__Project__c/fields/ampi__IATI_Humanitarian_Scope_Vocabulary__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Humanitarian_Scope_Vocabulary__c</fullName>
    <description>Picklist field to select which organisation&apos;s vocabulary is being used to classify the humanitarian scope of an IATI Activity for IATI reporting.</description>
    <label>IATI Humanitarian Scope Vocabulary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-2</fullName>
                <label>Glide</label>
            </value>
            <value>
                <fullName>2-1</fullName>
                <label>Humanitarian Plan</label>
            </value>
            <value>
                <fullName>99</fullName>
                <label>Reporting Organisation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>