force-app/main/default/objects/ampi__Project__c/fields/ampi__IATI_Humanitarian_Scope_Vocabulary_URI__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Humanitarian_Scope_Vocabulary_URI__c</fullName>
    <description>Text field to store the URI source of the vocabulary being used for humanitarian scope classification for IATI reporting.</description>
    <inlineHelpText>This link will be published in the IATI Activity file and must be publicly accessible.</inlineHelpText>
    <label>IATI Humanitarian Scope Vocabulary URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>