force-app/main/default/objects/ampi__Project__c/fields/ampi__IATI_Linked_Data_URI__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Linked_Data_URI__c</fullName>
    <description>Text field to link to any external data that should be published alongside the IATI data stored within Amp Impact.</description>
    <inlineHelpText>This link will be published in the IATI Activity file and must be publicly accessible.</inlineHelpText>
    <label>IATI Linked Data URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>