force-app/main/default/objects/ampi__Project__c/fields/ampi__IATI_Objectives__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Objectives__c</fullName>
    <description>New long text area to capture high level objectives of an IATI Activity for reporting in the IATI Activity file.</description>
    <label>Objectives</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>