force-app/main/default/objects/ampi__Project__c/fields/ampi__IATI_Other__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Other__c</fullName>
    <description>Long text area field to capture any other notes/comments about an IATI Activity/Amp project.</description>
    <label>IATI Other</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>