force-app/main/default/objects/ampi__Project__c/fields/ampi__IATI_Project_Status__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Project_Status__c</fullName>
    <description>Picklist field to choose the lifecycle status of the activity from pipeline to completion</description>
    <inlineHelpText>Choose the lifecycle status of the activity from pipeline to completion</inlineHelpText>
    <label>IATI Project Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pipeline/identification</fullName>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>Completion</fullName>
            </value>
            <value>
                <fullName>Post-completion</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>