force-app/main/default/objects/ampi__Project__c/fields/ampi__IATI_Project_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Project_Status_Code__c</fullName>
    <description>This formula field returns code for IATI reporting based on project status mentioned in IATI Project Status field</description>
    <formula>CASE (ampi__IATI_Project_Status__c, &quot;Pipeline/identification&quot;,1,
&quot;Implementation&quot;,2,
&quot;Completion&quot;,3,
&quot;Post-completion&quot;,4,
&quot;Cancelled&quot;,5,
&quot;Suspended&quot;,6,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IATI Project Status Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>