force-app/main/default/objects/ampi__Project__c/fields/ampi__IATI_Target_Groups__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Target_Groups__c</fullName>
    <description>Long text area to list any target groups for an IATI Activity.</description>
    <label>Target Groups</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>