force-app/main/default/objects/ampi__Project__c/fields/ampi__IATI_Tied_Status__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Tied_Status__c</fullName>
    <description>Picklist field to choose whether the aid is untied, tied, or partially tied. This element specifies a default for all the activity&apos;s financial transactions; it can be overridden at the individual transaction level. If an activity is partially tied it is recommended that tied and untied commitments are reported as separate transactions and that transaction/tied-status is used to classify them.</description>
    <inlineHelpText>Type of Classification; Whether the aid is untied, tied, or partially tied. This element specifies a default for all the activity&apos;s financial transactions; it can be overridden at the individual transaction level.</inlineHelpText>
    <label>IATI Tied Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partially tied</fullName>
            </value>
            <value>
                <fullName>Tied</fullName>
            </value>
            <value>
                <fullName>Untied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>