force-app/main/default/objects/ampi__Project__c/fields/ampi__IATI_Tied_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Tied_Status_Code__c</fullName>
    <description>This formula field returns code for IATI reporting based on project status mentioned in IATI Tied Status field</description>
    <formula>CASE(ampi__IATI_Tied_Status__c,&quot;Partially tied&quot;,3,&quot;Tied&quot;,4,&quot;Untied&quot;,5,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Code corresponding to the IATI Tied Status</inlineHelpText>
    <label>IATI Tied Status code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>