force-app/main/default/objects/ampi__Project__c/fields/ampi__MI_Indicator_Order__c.field-meta.xml
<CustomField>
    <fullName>ampi__MI_Indicator_Order__c</fullName>
    <description>Picklist of fields on Indicator to set the default order of the Indicators Catalog table on ManageIndicators. If left NULL, the Indicators Catalog will sort by alphabetically ascending Definition.</description>
    <inlineHelpText>Select a field from Project Indicator to alphabetically order the Indicators Catalog table on ManageIndicators. If no field is selected, the table will by default be ordered alphabetically by Indicator Definition.</inlineHelpText>
    <label>Indicators Catalog Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ampi__Indicator_Fields</valueSetName>
    </valueSet>
</CustomField>