force-app/main/default/objects/ampi__Project__c/fields/ampi__MI_Project_Indicator_Order__c.field-meta.xml
<CustomField>
    <fullName>ampi__MI_Project_Indicator_Order__c</fullName>
    <description>Picklist of all fields on Project Indicator to set the default order of the Selected Indicators and Deactivated Indicators tables on ManageIndicators. If left NULL, the tables will sort by alphabetically ascending Definition.</description>
    <inlineHelpText>Select a field from Project Indicator to alphabetically order the Selected Indicators table on ManageIndicators. If no field is selected, the table will by default be ordered alphabetically by Indicator Definition.</inlineHelpText>
    <label>Selected Indicators Table Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ampi__Indicator_Fields</valueSetName>
    </valueSet>
</CustomField>