force-app/main/default/objects/ampi__Project__c/fields/ampi__Name_Language_2__c.field-meta.xml
<CustomField>
    <fullName>ampi__Name_Language_2__c</fullName>
    <description>Secondary translated version of Name. This value is printed in Name_Translated__c when USER_LANGUAGE_CODE = 2.</description>
    <label>Name Language 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>