force-app/main/default/objects/ampi__Project__c/fields/ampi__Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>ampi__Paid_Amount__c</fullName>
    <description>Roll up summary that sums the Amount values on all Disbursement records where Status equals &quot;Paid&quot;.</description>
    <inlineHelpText>Summation of all disbursements for this project where the status is set to Paid.</inlineHelpText>
    <label>Paid Amount</label>
    <summarizedField>ampi__Disbursement__c.ampi__Amount__c</summarizedField>
    <summaryFilterItems>
        <field>ampi__Disbursement__c.ampi__Status__c</field>
        <operation>equals</operation>
        <value>Paid</value>
    </summaryFilterItems>
    <summaryForeignKey>ampi__Disbursement__c.ampi__Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>