force-app/main/default/objects/ampi__Project__c/fields/ampi__Parent_Project__c.field-meta.xml
<CustomField>
    <fullName>ampi__Parent_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to refer to parent project to create a hierarchy of projects.</description>
    <inlineHelpText>Only applicable for sub-projects that are part of a multi-country project. Select the respective umbrella project. See Knowledge Base on how to create multicountry projects.</inlineHelpText>
    <label>Parent Project</label>
    <referenceTo>ampi__Project__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>