force-app/main/default/objects/ampi__Project__c/fields/ampi__Planned_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ampi__Planned_Start_Date__c</fullName>
    <description>Date field to document the planned start date of the project.</description>
    <inlineHelpText>Indicate the planned start date of the project here</inlineHelpText>
    <label>Planned Start Date</label>
    <type>Date</type>
</CustomField>