force-app/main/default/objects/ampi__Project__c/fields/ampi__Project_Status__c.field-meta.xml
<CustomField>
    <fullName>ampi__Project_Status__c</fullName>
    <description>Picklist to determine status of project and to be used in Path display on Lightning record page.</description>
    <label>Project Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Phase__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In Identification</fullName>
            </value>
            <value>
                <fullName>Principle GO</fullName>
            </value>
            <value>
                <fullName>Idea Submitted</fullName>
            </value>
            <value>
                <fullName>Idea Validated</fullName>
            </value>
            <value>
                <fullName>Idea In Pipeline</fullName>
            </value>
            <value>
                <fullName>Interest to Fund</fullName>
            </value>
            <value>
                <fullName>Needs Assessment Started</fullName>
            </value>
            <value>
                <fullName>Needs Assessment Submitted</fullName>
            </value>
            <value>
                <fullName>In Formulation</fullName>
            </value>
            <value>
                <fullName>HA Submitted</fullName>
            </value>
            <value>
                <fullName>Formal GO</fullName>
            </value>
            <value>
                <fullName>Commit Funding</fullName>
            </value>
            <value>
                <fullName>Plan Submitted</fullName>
            </value>
            <value>
                <fullName>Partnership Agreement Signed</fullName>
            </value>
            <value>
                <fullName>Concept in Formulation</fullName>
            </value>
            <value>
                <fullName>Concept Submitted</fullName>
            </value>
            <value>
                <fullName>Concept Validated</fullName>
            </value>
            <value>
                <fullName>Concept in Pipeline</fullName>
            </value>
            <value>
                <fullName>Concept Rejected</fullName>
            </value>
            <value>
                <fullName>Funding Approved</fullName>
            </value>
            <value>
                <fullName>Application in Formulation</fullName>
            </value>
            <value>
                <fullName>Application Submitted</fullName>
            </value>
            <value>
                <fullName>Application Approved</fullName>
            </value>
            <value>
                <fullName>Application Rejected</fullName>
            </value>
            <value>
                <fullName>In Implementation</fullName>
            </value>
            <value>
                <fullName>Project on Hold</fullName>
            </value>
            <value>
                <fullName>Exit Submitted</fullName>
            </value>
            <value>
                <fullName>Exit Validated</fullName>
            </value>
            <value>
                <fullName>Exit Funding Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>