force-app/main/default/objects/ampi__Project__c/fields/ampi__Ready_For_IATI_Reporting__c.field-meta.xml
<CustomField>
    <fullName>ampi__Ready_For_IATI_Reporting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field to record whether or not the project is ready for IATI reporting.</description>
    <inlineHelpText>Indicate if the project is ready for IATI reporting</inlineHelpText>
    <label>Ready for IATI reporting?</label>
    <type>Checkbox</type>
</CustomField>