force-app/main/default/objects/ampi__Project__c/fields/ampi__STAR_Project_Indicator_Order__c.field-meta.xml
<CustomField>
    <fullName>ampi__STAR_Project_Indicator_Order__c</fullName>
    <description>Picklist field to determine which field on Project Indicator that SetTargets and AddResults should use to order the Project Indicators listed in the tables. If left NULL, the tables will sort by alphabetically ascending Definition.</description>
    <inlineHelpText>Select a field from Project Indicator to alphabetically order the tables on SetTargets and AddResults. If no field is selected, the table will by default be ordered alphabetically by Indicator Definition.</inlineHelpText>
    <label>STAR Project Indicator Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ampi__Indicator_Fields</valueSetName>
    </valueSet>
</CustomField>