force-app/main/default/objects/ampi__Project__c/fields/ampi__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ampi__Start_Date__c</fullName>
    <description>Date field to specify the start date of the project</description>
    <label>Project Start Date</label>
    <type>Date</type>
</CustomField>