force-app/main/default/objects/ampi__Project__c/fields/ampi__Thematic_Area_Text__c.field-meta.xml
<CustomField>
    <fullName>ampi__Thematic_Area_Text__c</fullName>
    <description>Concatenated list of all Thematic Areas associated with a Project, via the Project Thematic Area junction object. The trigger on the Project_Thematic_Area__c object will roll-up Thematic Area Name to this field.</description>
    <label>Thematic Area</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>