force-app/main/default/objects/ampi__Project__c/fields/ampi__Thematic_Area_Text_Language_2__c.field-meta.xml
<CustomField>
    <fullName>ampi__Thematic_Area_Text_Language_2__c</fullName>
    <description>Secondary translated version of Thematic_Area_Text__c</description>
    <label>Thematic Area Language 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>