force-app/main/default/objects/ampi__Project__c/fields/ampi__Total_Disbursement_Amount__c.field-meta.xml
<CustomField>
    <fullName>ampi__Total_Disbursement_Amount__c</fullName>
    <description>Formula field that sums the amounts in all disbursements added to this project.</description>
    <inlineHelpText>Summation of all disbursements that are created for this project.</inlineHelpText>
    <label>Total Disbursement Amount</label>
    <summarizedField>ampi__Disbursement__c.ampi__Amount__c</summarizedField>
    <summaryForeignKey>ampi__Disbursement__c.ampi__Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>