force-app/main/default/objects/ampi__Project__c/fields/Applicant_Accountable_Organisation__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Accountable_Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicate which SOS organisation is either signing the contract with the donor or with the legal applicant if this is not an SOS organisation. E.g. [add example]</description>
    <inlineHelpText>Mandatory field when creating the record. Choose which SOS organisation is either signing the contract with the donor or with the legal applicant if this is not an SOS organisation. See Knowledge Base for more information</inlineHelpText>
    <label>SOS Lead Organisation</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select an SOS Organisation (MA)</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>SOS Organisation - MA</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects (SOS Applicant Organisation)</relationshipLabel>
    <relationshipName>Applicant_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>