force-app/main/default/objects/ampi__Project__c/fields/Application_Deadline_Concept_Note__c.field-meta.xml
<CustomField>
    <fullName>Application_Deadline_Concept_Note__c</fullName>
    <inlineHelpText>Only applicable for multistage applications: select application deadline for the concept note. Mandatory for status &quot;concept in formulation&quot;.</inlineHelpText>
    <label>Deadline Concept Note</label>
    <type>Date</type>
</CustomField>