force-app/main/default/objects/ampi__Project__c/fields/Application_Deadline_Full_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Application_Deadline_Full_Proposal__c</fullName>
    <inlineHelpText>Mandatory for status &quot;application in formulation&quot;. Enter application deadline for the full application.</inlineHelpText>
    <label>Deadline Full Proposal</label>
    <type>Date</type>
</CustomField>