force-app/main/default/objects/ampi__Project__c/fields/Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Type__c</fullName>
    <formula>CASE( Applicant_Accountable_Organisation__r.Type , &quot;NA&quot;, &quot;NA Lead&quot;, &quot;PA&quot;, &quot;PSA Lead&quot;,&quot;SA&quot;,&quot;PSA Lead&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This data field is filled automatically by the system based on the information entered in SOS Lead Organisation</inlineHelpText>
    <label>Application Type</label>
    <type>Text</type>
</CustomField>