force-app/main/default/objects/ampi__Project__c/fields/Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date__c</fullName>
    <inlineHelpText>Only applicable for multistage applications. Mandatory for status &quot;application in formulation&quot;. Date when concept note was approved by the donor.</inlineHelpText>
    <label>Concept Note Approval Date</label>
    <type>Date</type>
</CustomField>