force-app/main/default/objects/ampi__Project__c/fields/Approval_Process_Actions__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process_Actions__c</fullName>
    <label>Approval Process Actions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Create Checklist Documents</fullName>
            </value>
            <value>
                <fullName>Create Agreement Draft</fullName>
            </value>
            <value>
                <fullName>Notify New Agreement</fullName>
            </value>
            <value>
                <fullName>Update Agreement Status</fullName>
            </value>
            <value>
                <fullName>Update Agreement Signed Status</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>