force-app/main/default/objects/ampi__Project__c/fields/Approval_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Approval_Rationale__c</fullName>
    <inlineHelpText>Summarize why the project was approved / not approved</inlineHelpText>
    <label>Approval Rationale</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>